--- a/project/css/style.css
+++ b/project/css/style.css
@@ -2,9 +2,9 @@
 
 :root {
   --primary-color: #283D3B;
-  --secondary-color: #6CD4FF;
-  --accent1-color: #CCC7B9;
-  --accent2-color: #B8C5D6;
+  --secondary-color: #CCC7B9;
+  --accent1-color: #FFFFFF;
+  --accent2-color: #000000;
   --heading-font: "Roboto", sans-serif;
   --paragraph-font: "Lato", Helvetica, sans-serif;
 }
@@ -14,14 +14,16 @@ html {
 }
 
 body {
-  max-width: 900px;
+  max-width: 960px;
   margin: 0 auto;
-  background-color: white;
+  background-color: var(--accent1-color);
   padding: 1em
 }
 
 img {
-  max-width: 100%
+    /*max-width: 100%*/
+    width: 100px;
+    height: auto;
 }
 
 h1,
@@ -31,23 +33,37 @@ h4,
 h5,
 h6 {
   font-family: var(--heading-font);
-  color: black;
+  color: var(--accent2-color);
 }
 
+header, nav, main, footer {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+
+
 header {
+  background-color: var(--secondary-color);
+  color:var(--accent2-color);
+  border: 1px solid #333333;
   padding: 1em;
   text-align: center;
-  color: var(--primary-color);
-  background-color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+
+
 }
 
 header>h1 {
-  color: black;
+  color: var(--accent2-color);
+  margin-left: 30px;
+
 }
 
 p {
   font-family: var(--paragraph-font);
-  color: black;
+  color: var(--accent2-color);
   padding: 1em;
 }
 
@@ -59,7 +75,7 @@ p {
 }
 
 .colors th {
-  background-color: #999
+  background-color: #333333
 }
 
 .colors td {
@@ -84,15 +100,18 @@ p {
 }
 
 nav {
-  background-color: var(--accent2-color);
-  line-height: 3em;
-  text-align: center;
-  font-size: 1.2em
+  background-color: #3799d1;
+  border: 1px solid #333333;
+  padding: 0em;
+  line-height: .5em;
+  font-size: 1em;
+  
 }
 
 nav>ul {
   list-style-type: none;
   display: flex
+  
 }
 
 nav a {
@@ -101,14 +120,18 @@ nav a {
 }
 
 nav a:link{
-  color: black;
+  color: var(--accent2-color);
 }
 
 nav a:visited {
-  color: gray;
+  color: #4B4949;
 }
 
 nav a:hover {
-  color: blue;
-  background-color: none;
+  color: #0000ff;
+  background-color: white;
+}
+
+a.social {
+  style="width: 5px; height: auto; border: 0;"
 }
