--- a/project/css/style.css
+++ b/project/css/style.css
@@ -19,9 +19,9 @@ h1, h2, h3, h4, h5, h6 {
   color: #000000;
 }
 
-/*header, nav, main, footer {
+header, nav, main, footer {
    margin: 0 auto;
-}*/
+}
 
 header {
   background-color: #CCC7B9;
