--- a/project/css/style.css
+++ b/project/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
+html {
+  background-color: #283D3B
+}
+
 body {
   background-color: #ffffff;
   padding: 0;
