--- a/css/w6.css
+++ b/css/w6.css
@@ -2,23 +2,19 @@ body {
   font-size: 16px;
   background-color: #fff;
   margin: 30px;
+  max-width: 600px;
   font-family: 'Courier New', Courier, monospace
-}
-
-h1 {
-  text-decoration: underline;
-  color: navy;
 }
 
 h2 {
   border-bottom: 1px solid #333;
 }
 
-/* Activity 1 styles */
+/* Activity - styles */
+/* #region Activity 1 styles */
 .content1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  max-width: 600px;
   grid-gap: 20px;
   justify-items: center;
 }
@@ -48,3 +44,196 @@ h2 {
   background-color: blue;
   grid-column: 1/3;
 }
+/* #endregion */
+
+/* Assignment Layout and Positioning */
+/* #region Layout 2 */
+.content2 {
+  position: relative;
+  margin: 0em
+  ;
+}
+
+.red2 {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  position: relative;
+  top: 0px;
+  left: 50px;
+}
+
+.green2 {
+  width: 100px;
+  height: 100px;
+  background-color: green;
+  position: relative;
+  top: -50px;
+  left: 100px;
+}
+
+.gold2 {
+  width: 100px;
+  height: 100px;
+  background-color: gold;
+  position: relative;
+  top: -100px;
+  left: 150px;
+}
+
+.blue2 {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  position: relative;
+  top: -150px;
+  left: 200px;
+}
+/* #endregion */
+
+/* #region Layout 3 */
+.content3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.red3 {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+  grid-column: 1/4;
+}
+
+.green3 {
+  width: 300px;
+  height: 200px;
+  background-color: green;
+  grid-column: 1/2;
+}
+
+.gold3 {
+  width: 300px;
+  height: 200px;
+  background-color: gold;
+  grid-column: 3/4;
+}
+
+.blue3 {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
+  grid-column: 1/4;
+}
+/* #endregion */
+
+/* #region Layout 4 */
+.content4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  max-width: 400px;
+}
+
+.red4 {
+  width: 300px;
+  height: 100%;
+  background-color: red;
+  grid-row: 1/4;
+}
+
+.green4 {
+  width: 300px;
+  height: 150px;
+  background-color: green;
+}
+
+.gold4 {
+  width: 300px;
+  height: 150px;
+  background-color: gold;
+}
+
+.blue4 {
+  width: 300px;
+  height: 150px;
+  background-color: blue;
+}
+/* #endregion */
+
+/* #region Layout 5 */
+.content5 {
+  display: block;
+  width: 600px;
+}
+
+.red5 {
+  width: 100%;
+  height: 100px;
+  background-color: red;
+}
+
+.green5 {
+  float: left;
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  margin: 0 20px 10px 0;
+}
+
+.gold5 {
+  background-color: gold;
+  padding: 20px;
+}
+
+.blue5 {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
+  top: 400px;
+  clear: both;
+}
+/* #endregion */
+
+/* #region Layout 6 */
+.content6 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  position: relative;
+}
+
+.red6 {
+  width: 400px;
+  height: 200px;
+  background-color: red;
+  z-index: 1;
+  position: absolute;
+}
+
+.green6 {
+  width: 200px;
+  height: 200px;
+  background-color: green;
+  z-index: 3;
+  position: absolute;
+  top: 400px;
+}
+
+.gold6 {
+  width: 200px;
+  height: 400px;
+  background-color: gold;
+  z-index: 4;
+  position: absolute;
+  top: 200px;
+  left: 400px;
+}
+
+.blue6 {
+  width: 400px;
+  height: 400px;
+  background-color: blue;
+  z-index: 2;
+  position: absolute;
+  top: 100px;
+  left: 100px;
+}
+/* #endregion */
