--- a/css/w6-challenge.css
+++ b/css/w6-challenge.css
@@ -2,6 +2,7 @@ body {
   font-size: 16px;
   background-color: #fff;
   margin: 30px;
+  max-width: 600px;
   font-family: 'Courier New', Courier, monospace
 }
 
