--- a/project/css/style.css
+++ b/project/css/style.css
@@ -80,6 +80,8 @@ nav ul {
 
 nav ul li {
   list-style: none;
+  flex: 1 1 auto;
+  text-align: center;
 }
 
 nav ul li a {
@@ -87,7 +89,7 @@ nav ul li a {
   text-decoration: none;
   color: #fff;
   font-size: .8rem;
-  padding: 10px;
+  padding: 1rem;
 }
 
 nav a {
@@ -136,6 +138,4 @@ nav a:hover {
 
 .social-images {
   text-align: right;
-  /*width: 10px;
-  height: auto;
-}*/
+}
