--- a/project/css/style.css
+++ b/project/css/style.css
@@ -111,7 +111,7 @@ nav a:hover {
 }
 
 .main-image {
-  width: 150px;
+  width: 100%;
   height: auto;
   margin: 10px;
 }
@@ -127,14 +127,65 @@ nav a:hover {
 .body-parapgraph {
     font-family: "Lato", Helvetica, sans-serif;
     color: #000000;
-    text-align: center;
     margin-bottom: 6em;
+}
+
+.banner-box {
+  width: 100%;
+  height: auto;
+}
+
+.home-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 10px ;
+}
+
+.home-headline-1 { 
+  grid-column: 1 / 4; 
+  grid-row: 1 / 2; 
+}
+
+.home-paragraph-1 { 
+  grid-column: 1 / 4; 
+  grid-row: 2 / 4; 
+}
+
+.home-right-img { 
+  grid-column: 4 / 6; 
+  grid-row: 1 / 3; 
+  width: 100%;
+  height: auto; 
+}
+
+.home-headline-2 { 
+  grid-column: 3 / 6; 
+  grid-row: 4 / 5; 
+}
+
+.home-paragraph-2 { 
+  grid-column: 4 / 6; 
+  grid-row: 5 / 7; 
+}
+
+.home-left-img { 
+  grid-column: 1 / 3; 
+  grid-row: 4 / 6;
+  width: 100%;
+  height: auto; 
+}
+
+.home-paragraph-3 { 
+  grid-column: 1 / 6; 
+  grid-row: 7 / 8;
+  text-align: center; 
 }
 
 .footer {
   text-align: right;
 } 
 
-.social-images {
+/*.social-images {
   text-align: right;
-}
+}*/
