--- a/project/css/style.css
+++ b/project/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
+@import url('https://fonts.googleapis.com/css?family=Lato|Roboto');
 
 html {
   background-color: #283D3B
@@ -137,48 +137,49 @@ nav a:hover {
 
 .home-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 10px ;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
 }
 
 .home-headline-1 { 
-  grid-column: 1 / 4; 
-  grid-row: 1 / 2; 
+  grid-column: 1 / 6; 
+  grid-row: 1 / 2;
+  justify-content: center;
 }
 
 .home-paragraph-1 { 
-  grid-column: 1 / 4; 
-  grid-row: 2 / 4; 
+  grid-column: 1 / 6; 
+  grid-row: 2 / 3; 
 }
 
 .home-right-img { 
-  grid-column: 4 / 6; 
+  grid-column: 7 / 12; 
   grid-row: 1 / 3; 
   width: 100%;
-  height: auto; 
+  height: auto;
 }
 
 .home-headline-2 { 
-  grid-column: 3 / 6; 
-  grid-row: 4 / 5; 
+  grid-column: 7 / 12; 
+  grid-row: 3 / 4; 
 }
 
 .home-paragraph-2 { 
-  grid-column: 4 / 6; 
-  grid-row: 5 / 7; 
+  grid-column: 7 / 12; 
+  grid-row: 4 / 5; 
 }
 
 .home-left-img { 
-  grid-column: 1 / 3; 
-  grid-row: 4 / 6;
+  grid-column: 1 / 6; 
+  grid-row: 3 / 5;
   width: 100%;
   height: auto; 
 }
 
 .home-paragraph-3 { 
-  grid-column: 1 / 6; 
-  grid-row: 7 / 8;
+  grid-column: 1 / 12; 
+  grid-row: 5 / 6;
   text-align: center; 
 }
 
@@ -186,6 +187,6 @@ nav a:hover {
   text-align: right;
 } 
 
-/*.social-images {
+.social-images {
   text-align: right;
-}*/
+}
