--- a/project/css/style.css
+++ b/project/css/style.css
@@ -10,10 +10,11 @@ body {
   margin: 0;
   font-size: 16px;
   font-family: "Lato", Helvetica, sans-serif;
+  max-width: 960px;
 }
 
 div.page-container {
-  max-width: 960px;
+  /*max-width: 960px;*/
   margin: 0 auto;
 }
 
@@ -143,30 +144,30 @@ nav a:hover {
 }
 
 .home-headline-1 { 
-  grid-column: 1 / 6; 
+  grid-column: 1 / 7; 
   grid-row: 1 / 2;
   justify-content: center;
 }
 
 .home-paragraph-1 { 
-  grid-column: 1 / 6; 
+  grid-column: 1 / 7; 
   grid-row: 2 / 3; 
 }
 
 .home-right-img { 
-  grid-column: 7 / 12; 
+  grid-column: -1 / -6; 
   grid-row: 1 / 3; 
   width: 100%;
   height: auto;
 }
 
 .home-headline-2 { 
-  grid-column: 7 / 12; 
+  grid-column: 6 / 12; 
   grid-row: 3 / 4; 
 }
 
 .home-paragraph-2 { 
-  grid-column: 7 / 12; 
+  grid-column: 6 / 12; 
   grid-row: 4 / 5; 
 }
 
