--- a/project/css/style.css
+++ b/project/css/style.css
@@ -5,53 +5,45 @@ html {
 }
 
 body {
+  max-width: 960px;
+  margin: 0 auto;
   background-color: #ffffff;
   padding: 0;
-  margin: 0;
   font-size: 16px;
   font-family: "Lato", Helvetica, sans-serif;
-  max-width: 960px;
 }
 
-div.page-container {
-  /*max-width: 960px;*/
-  margin: 0 auto;
+.page-container {
 }
-
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Roboto", Helvetica, sans-serif;
   color: #000000;
 }
 
-header, nav, main, footer {
-   margin: 0 auto;
-}
-
-header {
+.header {
   background-color: #CCC7B9;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #000000;
   text-align: center;
 }
 
-header img {
+.picture {
+  border-radius: 50%;
   width: 100px;
   height: auto;
   margin: 30px;
 }
 
-.headings {
+.heading {
   display: flex;
   flex-direction: column;
 }
 
-.headings>h1 {
+.heading>h1 {
   font-size: 2em;
-  color: #000000;
   margin: 0;
   margin-left: 30px;
 }
@@ -63,29 +55,28 @@ header img {
   letter-spacing: 1.5pt;
 }
 
-nav {
+.nav {
   background-color: #3799d1;
   margin: 0;
   padding: 0em;
   line-height: .5em;
   font-size: 1em;
-  max-width: 960px;
 }
 
-nav ul {
+.nav ul {
   display: flex;
   flex-direction: row;
   margin: 0;  
   padding: 0;
 }
 
-nav ul li {
+.nav ul li {
   list-style: none;
   flex: 1 1 auto;
   text-align: center;
 }
 
-nav ul li a {
+.nav ul li a {
   display: block;
   text-decoration: none;
   color: #fff;
@@ -93,20 +84,20 @@ nav ul li a {
   padding: 1rem;
 }
 
-nav a {
+.nav a {
   padding: 1em;
   min-width: 70px
 }
 
-nav a:link{
+.nav a:link{
   color: #000000;
 }
 
-nav a:visited {
+.nav a:visited {
   color: #4B4949;
 }
 
-nav a:hover {
+.nav a:hover {
   color: #0000ff;
   background-color: white;
 }
@@ -122,7 +113,6 @@ nav a:hover {
   color: #000000;
   margin: 0;
   margin-left: 50px;
-
 }
 
 .body-parapgraph {
@@ -134,6 +124,33 @@ nav a:hover {
 .banner-box {
   width: 100%;
   height: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.banner-box-img {
+  grid-column: 1 / -1;
+  grid-row: 1;
+}
+
+.action {
+  grid-column: 2;
+  grid-row: 1;
+  background-color: rgba(240, 240, 240, 0.7);
+  margin: 23.8em 1em 1.2em 10em;
+  padding: 0.5em;
+  text-align: center;
+}
+
+.action>h3 {
+  margin: 0;
+}
+
+.action-button {
+  line-height: 2em;
+  font-size: 1em;
+  text-align: center;
+  align-items: center;
 }
 
 .home-grid {
@@ -141,6 +158,15 @@ nav a:hover {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 10px;
+  align-items: center;
+  padding: 10px;
+}
+
+.home-left-img,
+.home-right-img {
+    border: 1px solid #ccc;
+    padding: 10px;
+    box-shadow: 5px 5px 5px #999;
 }
 
 .home-headline-1 { 
@@ -150,15 +176,18 @@ nav a:hover {
 }
 
 .home-paragraph-1 { 
-  grid-column: 1 / 7; 
-  grid-row: 2 / 3; 
+  grid-column: 2 / 7; 
+  grid-row: 2 / 3;
+  margin: 1em; 
 }
 
 .home-right-img { 
-  grid-column: -1 / -6; 
-  grid-row: 1 / 3; 
-  width: 100%;
+  grid-column: 7 / 12; 
+  grid-row: 1 / 3;
+  justify-content: center;
+  max-width: 100%;
   height: auto;
+
 }
 
 .home-headline-2 { 
@@ -167,15 +196,16 @@ nav a:hover {
 }
 
 .home-paragraph-2 { 
-  grid-column: 6 / 12; 
-  grid-row: 4 / 5; 
+  grid-column: 7 / 12; 
+  grid-row: 4 / 5;
+  margin: 1em; 
 }
 
 .home-left-img { 
   grid-column: 1 / 6; 
   grid-row: 3 / 5;
-  width: 100%;
-  height: auto; 
+  max-width: 100%;
+  height: auto;
 }
 
 .home-paragraph-3 { 
@@ -185,9 +215,30 @@ nav a:hover {
 }
 
 .footer {
-  text-align: right;
+  background-color: #CCC7B9;
+  padding: 0;
+  display: flex;
+  /*align-items: center;
+  justify-content: center;
+  text-align: center;*/
+
 } 
 
+.bottom-title {
+  font-style: italic;
+  color: #000000;
+  font-size: 1rem;
+  letter-spacing: .4pt;
+  margin: 0;
+}
+
 .social-images {
-  text-align: right;
+  margin: 10px;
+  margin-left: 440px;
+}
+
+@media screen and (max-width: 550px) {
+  .home-grid {
+    display: block;
+  }
 }
