--- a/project/css/style.css
+++ b/project/css/style.css
@@ -214,17 +214,16 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center; 
 }
 
-.footer {
+footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;  
   background-color: #CCC7B9;
-  padding: 0;
-  display: flex;
-  /*align-items: center;
-  justify-content: center;
-  text-align: center;*/
+ }
 
-} 
-
-.bottom-title {
+.footer-text {
+  grid-column: 1 / 2; 
+  grid-row: 1 / 2;
   font-style: italic;
   color: #000000;
   font-size: 1rem;
@@ -233,8 +232,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .social-images {
-  margin: 10px;
-  margin-left: 440px;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  text-align: right;
 }
 
 @media screen and (max-width: 550px) {
