--- a/project/css/style.css
+++ b/project/css/style.css
@@ -82,6 +82,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   font-size: .8rem;
   padding: 1rem;
+  clear: both;
 }
 
 .nav a {
@@ -162,8 +163,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px;
 }
 
-.home-left-img,
-.home-right-img {
+.home-left-img, .home-right-img {
     border: 1px solid #ccc;
     padding: 10px;
     box-shadow: 5px 5px 5px #999;
@@ -240,5 +240,156 @@ footer {
 @media screen and (max-width: 550px) {
   .home-grid {
     display: block;
+    clear: both;
   }
 }
+
+.faq-grid {
+  display flex: ;
+  margin: 0 3em 0 3em; 
+}
+
+.faq-title {
+  padding-top: 1em;
+  padding-bottom: .5em;
+  padding-left: 0em;
+  margin: 0;
+}
+
+.faq-headline-1, .faq-headline-2, .faq-headline-3, .faq-headline-4, .faq-headline-5, .faq-headline-6 { 
+  padding-top: 1em;
+  padding-bottom: 1em;
+  padding-left: 1em;
+  margin: 0;
+}
+
+.faq-paragraph-1, .faq-paragraph-2, .faq-paragraph-3, .faq-paragraph-4, .faq-paragraph-5, .faq-paragraph-6 { 
+  padding-left: 2em;
+  margin: 0;
+}
+
+
+
+.about-grid {
+  display: grid;
+  grid-column: ;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  max-width: 960px;
+  grid-gap: 10px;
+  margin: 1em
+}
+
+.about-title {
+  width: 100%;
+  grid-column: 1/4;
+  grid-row: 1/2;
+  margin: 0;
+}
+
+.about-heading-1 {
+  grid-column: 1/5;
+  grid-row: 2/3;
+  padding-top: 1em;
+  margin: 0;
+}
+
+.about-address {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  margin: 0;
+}
+
+.about-contact {
+  grid-column: 2/3;
+  grid-row: 3/4;
+  margin: 0;
+}
+
+.about-image1 {
+  grid-column: 3/5;
+  grid-row: 3/4;
+  margin: 0;
+}
+
+.about-subheading-map {
+  grid-column: 1/3;
+  grid-row: 4/5;
+  text-align: center;
+  padding-top: 3em;
+  margin: 0;
+}
+
+.about-image-map {
+  grid-column: 1/3;
+  grid-row: 5/6;
+  margin: 0;
+  width: 100%;
+}
+
+.about-subheading-staff {
+  grid-column: 3/5;
+  grid-row: 4/5;
+  text-align: center;
+  padding-top: 3em;
+  margin: 0;
+}
+
+.about-image-staff {
+  grid-column: 3/5;
+  grid-row: 5/6;
+  margin: 0;
+}
+
+.about-heading-2 {
+  grid-column: 1/3;
+  grid-row: 6/7;
+  padding-top: 5em;
+  margin: 0;
+}
+
+.about-subheading-main_fork {
+  grid-column: 2/4;
+  grid-row: 7/8;
+  text-align: center;
+  padding-top: 3em;
+  margin: 0;
+}
+
+.about-paragraph-main_fork {
+  grid-column: 1/3;
+  grid-row: 8/9
+  padding: 10px;
+  margin: 0;
+}
+
+.about-image-main_fork {
+  grid-column: 3/5;
+  grid-row: 8/9;
+  margin: 0;
+}
+
+.about-subheading-desolation {
+  grid-column: 2/4;
+  grid-row: 9/10;
+  padding-top: 3em;
+  text-align: center;
+  margin: 0;
+}
+
+.about-paragraph-desolation {
+  grid-column: 3/5;
+  grid-row: 10/11;
+  padding: 10px;
+  margin: 0;
+}
+
+.about-image-desolation {
+  grid-column: 1/3;
+  grid-row: 10/11;
+  margin: 0;
+}
+
+
+
+
+
