--- a/project/css/style.css
+++ b/project/css/style.css
@@ -246,7 +246,7 @@ footer {
 
 .faq-grid {
   display flex: ;
-  margin: 0 3em 0 3em; 
+  margin: 0 3em 2em 3em; 
 }
 
 .faq-title {
@@ -389,8 +389,3 @@ footer {
   padding-bottom: 2em;
   margin: 0;
 }
-
-
-
-
-
