--- a/project/css/style.css
+++ b/project/css/style.css
@@ -163,7 +163,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px;
 }
 
-.home-left-img, .home-right-img {
+.home-left-img, .home-right-img, .about-image1, .about-image-staff, .about-image-main_fork, .about-image-desolation  {
     border: 1px solid #ccc;
     padding: 10px;
     box-shadow: 5px 5px 5px #999;
@@ -246,19 +246,18 @@ footer {
 
 .faq-grid {
   display flex: ;
-  margin: 0 3em 2em 3em; 
+  margin: 1em 3em 2em 3em; 
 }
 
 .faq-title {
-  padding-top: 1em;
   padding-bottom: .5em;
   padding-left: 0em;
   margin: 0;
 }
 
 .faq-headline-1, .faq-headline-2, .faq-headline-3, .faq-headline-4, .faq-headline-5, .faq-headline-6 { 
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding-top: 1.5em;
+  padding-bottom: .5em;
   padding-left: 1em;
   margin: 0;
 }
@@ -276,7 +275,7 @@ footer {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   max-width: 960px;
   grid-gap: 10px;
-  margin: 1em
+  margin: 1em 1em 2em 1em; 
 }
 
 .about-title {
@@ -365,6 +364,10 @@ footer {
 .about-image-main_fork {
   grid-column: 3/5;
   grid-row: 8/9;
+  padding-top: 15px;
+  justify-content: center;
+  max-width: 100%;
+  height: auto;
   margin: 0;
 }
 
@@ -386,6 +389,9 @@ footer {
 .about-image-desolation {
   grid-column: 1/3;
   grid-row: 10/11;
-  padding-bottom: 2em;
+  justify-content: center;
+  vertical-align: center;
+  max-width: 100%;
+  height: auto;
   margin: 0;
 }
