--- a/project/css/style.css
+++ b/project/css/style.css
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-size: .8rem;
+  font-size: 1.2rem;
   padding: 1rem;
   clear: both;
 }
