--- a/project/css/style.css
+++ b/project/css/style.css
@@ -271,7 +271,6 @@ footer {
 
 .about-grid {
   display: grid;
-  grid-column: ;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   max-width: 960px;
   grid-gap: 10px;
@@ -356,7 +355,7 @@ footer {
 
 .about-paragraph-main_fork {
   grid-column: 1/3;
-  grid-row: 8/9
+  grid-row: 8/9;
   padding: 10px;
   margin: 0;
 }
@@ -364,7 +363,7 @@ footer {
 .about-image-main_fork {
   grid-column: 3/5;
   grid-row: 8/9;
-  padding-top: 15px;
+  padding-top: 25px;
   justify-content: center;
   max-width: 100%;
   height: auto;
