--- a/final_project/site-plan/css/site-plan.css
+++ b/final_project/site-plan/css/site-plan.css
@@ -1,53 +1,48 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
 
 :root {
-  --primary-color: #283D3B;
-  --secondary-color: #6CD4FF;
-  --accent1-color: white;
-  --accent2-color: black;
+  --primary-color: #2B2118;
+  --secondary-color: #6F1A07;
+  --accent1-color: #ECF0F1;
+  --accent2-color: #A8763E;
   --heading-font: "Roboto", sans-serif;
   --paragraph-font: "Lato", Helvetica, sans-serif;
 }
 
 html {
-  background-color: var(--primary-color)
+  background-color: var(--primary-color);
 }
 
 body {
   max-width: 900px;
   margin: 0 auto;
-  background-color: var(--accent1-color);
-  padding: 1em
+  background-color: white;
+  padding: 1em;
 }
 
 img {
-  max-width: 100%
+  max-width: 100%;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: var(--heading-font);
-  color: var(--accent2-color);
+  color: var(--primary-color);
 }
 
 header {
   padding: 1em;
   text-align: center;
   color: var(--primary-color);
-  background-color: var(--secondary-color);
+  background-color: var(--accent2-color);
 }
 
 header>h1 {
-  color: var(--accent2-color);
+  color: var(--primary-color);
 }
 
 p {
   font-family: var(--paragraph-font);
-  color: var(--accent2-color);
+  color: var(--primary-color);
   padding: 1em;
 }
 
@@ -55,53 +50,53 @@ p {
   width: 100%;
   min-width: 350px;
   margin: auto;
-  text-align: center
+  text-align: center;
 }
 
 .colors th {
-  background-color: #999
+  background-color: #999;
 }
 
 .colors td {
   width: 25%;
-  height: 3em
+  height: 3em;
 }
 
 .primary {
-  background-color: var(--primary-color)
+  background-color: var(--primary-color);
 }
 
 .secondary {
-  background-color: var(--secondary-color)
+  background-color: var(--secondary-color);
 }
 
 .accent1 {
-  background-color: var(--accent1-color)
+  background-color: var(--accent1-color);
 }
 
 .accent2 {
-  background-color: var(--accent2-color)
+  background-color: var(--accent2-color);
 }
 
 nav {
   background-color: var(--accent2-color);
   line-height: 3em;
   text-align: center;
-  font-size: 1.2em
+  font-size: 1.2em;
 }
 
 nav>ul {
   list-style-type: none;
-  display: flex
+  display: flex;
 }
 
 nav a {
   padding: 1em;
-  min-width: 70px
+  min-width: 70px;
 }
 
 nav a:link{
-  color: var(--accent2-color);
+  color: var(--primary-color);
 }
 
 nav a:visited {
@@ -110,5 +105,5 @@ nav a:visited {
 
 nav a:hover {
   color: blue;
-  background-color: none;
+  background-color: white;
 }
