--- a/final_project/css/style.css
+++ b/final_project/css/style.css
@@ -8,13 +8,13 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   background-color: #ffffff;
-  /*padding: 1em;*/
   font-size: 16px;
   font-family: "Lato", Helvetica, sans-serif;
 }
 
 img {
   max-width: 100%;
+  height: auto;
 }
 
 .page-container {
@@ -23,54 +23,6 @@ img {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Roboto", Helvetica, sans-serif;
   color: #2B2118;
-}
-
-.header {
-  background-color: #A8763E;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-}
-
-.picture {
-  border-radius: 50px;
-  width: 100px;
-  height: auto;
-  margin: 30px;
-
-  /*border-radius: 15px 50px;
-  background: #73AD21;
-  padding: 20px;
-  width: 200px;
-  height: 150px;
-
-  border-radius: 25px;
-  background: url(paper.gif);
-  background-position: left top;
-  background-repeat: repeat;
-  padding: 20px;
-  width: 200px;
-  height: 150px;*/
-}
-
-.heading {
-  display: flex;
-  flex-direction: column;
-}
-
-.heading>h1 {
-  font-size: 2em;
-  margin: 0;
-  margin-left: 30px;
-}
-
-.motto {
-  font-style: italic;
-  color: #000000;
-  font-size: 1rem;
-  letter-spacing: 1.5pt;
 }
 
 .nav {
@@ -98,7 +50,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-size: 1.2rem;
+  font-size: .8rem;
   padding: 1rem;
   clear: both;
 }
@@ -120,6 +72,42 @@ h1, h2, h3, h4, h5, h6 {
   color: #0000ff;
   background-color: white;
 }
+
+.header {
+  background-color: #A8763E;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.picture {
+  width: 100px;
+  height: auto;
+  margin: 30px;
+  border-radius: 5px;
+}
+
+.heading {
+  display: flex;
+  flex-direction: column;
+}
+
+.heading>h1 {
+  font-size: 2em;
+  margin: 0;
+  margin-left: 30px;
+}
+
+.motto {
+  font-style: italic;
+  color: #000000;
+  font-size: 1rem;
+  letter-spacing: 1.5pt;
+}
+
+
 
 .main-image {
   width: 100%;
@@ -152,30 +140,13 @@ h1, h2, h3, h4, h5, h6 {
   grid-row: 1;
 }
 
-.action {
-  grid-column: 2;
-  grid-row: 1;
-  background-color: rgba(240, 240, 240, 0.7);
-  margin: 23.8em 1em 1.2em 10em;
-  padding: 0.5em;
-  text-align: center;
-}
-
-.action>h3 {
-  margin: 0;
-}
-
-.action-button {
-  line-height: 2em;
-  font-size: 1em;
-  text-align: center;
-  align-items: center;
-}
-
 .home-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 457.25 5% 47.25%;
+  grid-template-rows: 20px 1fr;
+  /*grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  */
   grid-gap: 10px;
   align-items: center;
   padding: 10px;
@@ -188,27 +159,26 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .home-headline-1 { 
-  grid-column: 1 / 7; 
+  grid-column: 1 / 4; 
   grid-row: 1 / 2;
   justify-content: center;
 }
 
 .home-paragraph-1 { 
-  grid-column: 2 / 7; 
+  grid-column: 1 / 2; 
   grid-row: 2 / 3;
   margin: 1em; 
 }
 
 .home-right-img { 
-  grid-column: 7 / 12; 
-  grid-row: 1 / 3;
+  grid-column: 3 / 4; 
+  grid-row: 2 / 3;
   justify-content: center;
   max-width: 100%;
   height: auto;
-
 }
 
-.home-headline-2 { 
+/*.home-headline-2 { 
   grid-column: 6 / 12; 
   grid-row: 3 / 4; 
 }
@@ -229,7 +199,7 @@ h1, h2, h3, h4, h5, h6 {
 .home-paragraph-3 { 
   grid-column: 1 / 12; 
   grid-row: 5 / 6;
-  text-align: center; 
+  text-align: center;*/ 
 }
 
 footer {
@@ -249,13 +219,13 @@ footer {
   margin: 0;
 }
 
-.social-images {
+/*.social-images {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
   text-align: right;
   padding-top: .5em;
   padding-right: .5em;
-}
+}*/
 
 @media screen and (max-width: 550px) {
   .home-grid {
