--- a/final_project/site-plan/css/site-plan.css
+++ b/final_project/site-plan/css/site-plan.css
@@ -11,6 +11,10 @@ body {
   font-family: "Lato", Helvetica, sans-serif;
 }
 
+.signature {
+
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -55,7 +59,10 @@ p {
 .colors td {
   width: 25%;
   height: 3em;
+  color: #ffffff;
 }
+
+
 
 .primary {
   background-color: #2B2118;
@@ -67,6 +74,7 @@ p {
 
 .accent1 {
   background-color: #ECF0F1;
+  color: #000000;
 }
 
 .accent2 {
@@ -132,7 +140,7 @@ footer {
   grid-column: 1 / 2; 
   grid-row: 1 / 2;
   font-style: italic;
-  color: #000000;
+  color: #ffffff;
   font-size: 1rem;
   letter-spacing: .4pt;
   margin-left: 10px;
